--- a/week_7_collab.Rmd
+++ b/week_7_collab.Rmd
@@ -13,3 +13,4 @@ Whatsup Karla!
 Hey!! I got it to work! :) 
 This is pretty fun...like coder's AIM
 It reminds me of like an old school chatroom lmao 
+lol yes totally
